ingress-ALB/example3-sslhost/echo1.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo1-service
  namespace: "echotest"
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5678
  - name: https
    protocol: TCP
    port: 443
    targetPort: 5678
  type: NodePort
  selector:
    app: echo1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "echo1-deployment"
  namespace: "echotest"
spec:
  selector:
    matchLabels:
      app: echo1
  replicas: 3
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
      - name: echo1
        image: hashicorp/http-echo
        args:
        - "-text=echo1"
        ports:
        - containerPort: 5678
