ingress-ALB/example3-sslhost/echo2.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo2-service
  namespace: "echotest"
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5678
  - name: https
    protocol: TCP
    port: 443
    targetPort: 5678
  type: NodePort
  selector:
    app: echo2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "echo2-deployment"
  namespace: "echotest"
spec:
  selector:
    matchLabels:
      app: echo2
  replicas: 1
  template:
    metadata:
      labels:
        app: echo2
    spec:
      containers:
      - name: echo2
        image: hashicorp/http-echo
        args:
        - "-text=echo2"
        ports:
        - containerPort: 5678
