ingress-ALB/example3-sslhost/ingressnew.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "echo-ingress"
  namespace: "echotest"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:500750061763:certificate/81f1de4a-b2a2-46de-82a3-8c582c5ba86b
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: echo-ingress
spec:
  rules:
    - host: web1.cloudjethost.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: echo1-service
              servicePort: 80
          - path: /echo2/*
            backend:
              serviceName: echo2-service
              servicePort: 80
